@startuml

title __COR's Class Diagram__\n

  namespace in.ashwanik.pdp.cor {
    abstract class in.ashwanik.pdp.cor.AbstractLogger {
        # outputStream : OutputStream
        {static} ~ DEBUG : int
        {static} ~ ERROR : int
        {static} ~ INFO : int
        ~ level : int
        ~ AbstractLogger()
        ~ logMessage()
        ~ setNextLogger()
        {abstract} ~ write()
    }
  }
  

  namespace in.ashwanik.pdp.cor {
    class in.ashwanik.pdp.cor.ConsoleLogger {
        ~ ConsoleLogger()
        ~ write()
    }
  }
  

  namespace in.ashwanik.pdp.cor {
    class in.ashwanik.pdp.cor.FileLogger {
        ~ FileLogger()
        ~ write()
    }
  }
  

  in.ashwanik.pdp.cor.AbstractLogger o-- in.ashwanik.pdp.cor.AbstractLogger : nextLogger
  in.ashwanik.pdp.cor.ConsoleLogger -up-|> in.ashwanik.pdp.cor.AbstractLogger
  in.ashwanik.pdp.cor.FileLogger -up-|> in.ashwanik.pdp.cor.AbstractLogger


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
